# chrono-synth-os

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  tsconfig.integration.json  tsconfig.json  tsconfig.scripts.json  tsconfig.src.json
.github/: dependabot.yml  pull_request_template.md
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  tray.rs
apps/desktop/src-tauri/src/commands/: app_settings.rs  crdt.rs  database.rs  memories.rs  mod.rs  personas.rs  snapshots.rs  sync.rs
apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs
docs/: api.md  architecture.md  disaster-recovery-runbook.md  life-simulation-api-design.md  observability-worker-runbook.md  press-kit.md  production-readiness.md  self-learning-stop-logic.md  spa-implementation-plan.md  zero-llm-precision-and-growth.md
k8s/: README.md  configmap.yml  deployment.yml  hpa.yml  namespace.yml  network-policy.yml  observability-prometheus-rule.yml  observability-worker-deployment.yml  observability-worker-network-policy.yml  observability-worker-service.yml  pvc.yml  service.yml
perf/: k6-agent-tool.js  k6-conversation.js  k6-portability-export.js
scripts/: audit-restore-check.ts  backup_db.sh  backup_storage.sh  check-forbidden-imports.sh  check-license-boundary.mjs  codegen-design-tokens-css.mjs  (+24 more)
(+1492 files in other folders)
